# star-v3

./: LICENSE.txt  README.md  pyproject.toml
paper/: generate_fig_for_bound.ipynb  generate_fig_for_tradeoff.ipynb  modules_for_v3.py
src/starsim/: __init__.py
src/starsim/core/: circuit_level.py  injection_module.py  parameter.py  preprocess.py
src/starsim/simulator/: manager.py  resource.py
src/starsim/task/: format.py  hamiltonian.py  trotter.py
src/starsim/util/: plot_parameters.py
